Fix: fixed alignment

--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -10,6 +10,7 @@
   width: 1200px;
   display: grid;
   margin: 20px;
+  margin-top: 10px;
   grid-gap: 20px;
   grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
   /* background-color: #2196f3; */
